fix: layout issue

--- a/openmetadata-ui/src/main/resources/ui/src/styles/app.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/app.less
@@ -434,9 +434,8 @@ a[href].link-text-grey,
 }
 .entity-tag-right-panel-container {
   height: @entity-details-tab-height;
-  overflow-y: scroll;
+  overflow-y: auto;
   border-left: @global-border;
-  margin-left: 20px;
   padding: 12px 8px 0 8px;
 }
 
